# ML-showcase-causal-genomics-demo

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: demo.yaml
ml_showcase/: __init__.py  config.py  run_experiment.py  train.py  utils.py
ml_showcase/causal/: discovery.py
ml_showcase/data/: __init__.py  synthetic.py
ml_showcase/models/: set_model.py
scripts/: run_demo.sh
src/: run_experiment.py
tests/: test_smoke.py
